# scaling-crl

./: .gitignore  README.md  _config.yml  ant_u_maze_Q_heatmap.ipynb  buffer.py  ckpt_train_crl_jax_brax_final_noish4_nodense.py  evaluator.py  index.html  job.slurm  memory_bank.py  mrn.py  pyproject.toml  render.py  train.py  train_crl_jax_brax_final_noish4_nodense.py
envs/: ant_ball.py  ant_maze.py  ant_maze_generalization.py  humanoid_maze.py  pusher.py
envs/assets/: panda_binpick_easy_EEF.xml
envs/manipulation/: arm_binpick_easy_EEF.py  arm_envs.py  arm_grasp.py
runs/: .gitkeep
static/css/: index.css
